--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="blue_700">#347896</color>
 
     <color name="red_200">#FF000E</color>
+    <color name="red_700">#7D0000</color>
 
     <color name="green_200">#31B057</color>
     <color name="green_100">#3331B057</color>
