--- a/app/src/main/res/xml/grab_pay_scene.xml
+++ b/app/src/main/res/xml/grab_pay_scene.xml
@@ -19,7 +19,9 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:elevation="2dp"
+            android:layout_marginBottom="64dp"
             motion:layout_constraintLeft_toRightOf="parent"
+            motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintTop_toTopOf="parent" />
     </ConstraintSet>
 
@@ -29,9 +31,11 @@
             android:id="@+id/card"
             android:layout_width="match_parent"
             android:layout_height="210dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginBottom="64dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="32dp"
             android:elevation="2dp"
             motion:layout_constraintTop_toTopOf="parent" />
     </ConstraintSet>
