Added Gopay success animating

--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -24,7 +24,7 @@
             tools:context=".MapsActivity" />
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/container"
+            android:id="@+id/favoriteContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
