--- a/app/src/main/res/layout/activity_burger.xml
+++ b/app/src/main/res/layout/activity_burger.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.burgerswipe.BurgerActivity">
+    tools:context=".util.burgerswipe.BurgerActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/favoriteContainer"
