--- a/app/src/main/res/layout/fragment_loading_bottom.xml
+++ b/app/src/main/res/layout/fragment_loading_bottom.xml
@@ -18,21 +18,21 @@
         <View
             android:id="@+id/background"
             android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/header"
-            android:layout_height="0dp"
-            android:background="@color/white" />
+            app:layout_constraintTop_toBottomOf="@id/header" />
 
         <View
             android:id="@+id/header"
             android:layout_width="0dp"
             android:layout_height="16dp"
-            app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/shp_white_top_8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.mayburger.gojekuiclone.util.textfont.TextFont
             android:id="@+id/textWait"
