--- a/app/src/main/res/drawable/shp_circle_darkblue700.xml
+++ b/app/src/main/res/drawable/shp_circle_darkblue700.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/blue_500"/>
-    <corners android:radius="16dp"/>
+<solid android:color="@color/dark_blue_700"/>
+    <corners android:radius="200dp"/>
 </shape>
