--- a/app/src/main/res/layout/fragment_food_order.xml
+++ b/app/src/main/res/layout/fragment_food_order.xml
@@ -8,103 +8,149 @@
             type="com.mayburger.gojekuiclone.ui.food.order.FoodOrderViewModel" />
     </data>
 
-    <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/motionLayout"
+        android:id="@+id/root"
         android:layout_width="match_parent"
-        android:background="@null"
-        android:layout_height="match_parent"
-        app:layoutDescription="@xml/fragment_food_order_scene"
-        tools:context=".ui.food.FoodActivity">
+        android:layout_height="match_parent">
 
-        <RelativeLayout
+
+        <View
             android:id="@+id/background"
             android:layout_width="match_parent"
-            android:background="@color/white"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:background="@color/white" />
 
-        <com.mayburger.gojekuiclone.ui.CircleCardView
-            android:id="@+id/card"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="32dp"
-            app:cardBackgroundColor="@color/green_700"
-            app:cardCornerRadius="300dp"
-            app:cardElevation="2dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <com.mayburger.gojekuiclone.util.Fireworks
+            android:id="@+id/fireworkRed"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="16dp"
+             />
 
-                <com.mayburger.gojekuiclone.util.textfont.TextFont
-                    android:id="@+id/textOrder"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Order"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:typeface="bold" />
-
-                <ProgressBar
-                    android:id="@+id/progressOrder"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:indeterminateTint="@color/white"
-                    android:visibility="invisible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
-                    android:id="@+id/image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="24dp"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </com.mayburger.gojekuiclone.ui.CircleCardView>
-
-        <ImageView
-            android:id="@+id/dummy"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/marker_foot"
-            android:layout_width="16dp"
-            android:layout_height="24dp"
-            android:alpha="0"
-            android:src="@drawable/ic_marker_foot"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card" />
-
-        <com.mayburger.gojekuiclone.util.textfont.TextFont
-            android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:alpha="0"
-            android:text="We got your order"
-            android:textColor="@color/black"
+        <com.mayburger.gojekuiclone.util.Fireworks
+            android:id="@+id/fireworkYellow"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="64dp"
             android:layout_marginTop="32dp"
-            android:textSize="24sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dummy"
-            app:typeface="bold" />
-    </androidx.constraintlayout.motion.widget.MotionLayout>
+            android:layout_marginEnd="16dp"
+             />
+
+        <com.mayburger.gojekuiclone.util.Fireworks
+            android:id="@+id/fireworkBlue"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="220dp"
+            android:layout_marginEnd="16dp"
+             />
+
+        <com.mayburger.gojekuiclone.util.Fireworks
+            android:id="@+id/fireworkGreen"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="250dp"
+            android:layout_marginEnd="64dp"
+             />
+
+        <androidx.constraintlayout.motion.widget.MotionLayout
+            android:id="@+id/motionLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            app:layoutDescription="@xml/fragment_food_order_scene"
+            tools:context=".ui.food.FoodActivity">
+
+            <com.mayburger.gojekuiclone.ui.CircleCardView
+                android:id="@+id/card"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="32dp"
+                app:cardBackgroundColor="@color/green_700"
+                app:cardCornerRadius="300dp"
+                app:cardElevation="2dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <com.mayburger.gojekuiclone.util.textfont.TextFont
+                        android:id="@+id/textOrder"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Order"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:typeface="bold" />
+
+                    <ProgressBar
+                        android:id="@+id/progressOrder"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:indeterminateTint="@color/white"
+                        android:visibility="invisible"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="24dp"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </com.mayburger.gojekuiclone.ui.CircleCardView>
+
+            <ImageView
+                android:id="@+id/dummy"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/marker_foot"
+                android:layout_width="16dp"
+                android:layout_height="24dp"
+                android:alpha="0"
+                android:src="@drawable/ic_marker_foot"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card" />
+
+            <com.mayburger.gojekuiclone.util.textfont.TextFont
+                android:id="@+id/text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:alpha="0"
+                android:text="We got your order"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/dummy"
+                app:typeface="bold" />
+        </androidx.constraintlayout.motion.widget.MotionLayout>
+
+
+    </RelativeLayout>
+
 </layout>
