--- a/app/src/main/res/layout/fragment_pay_review.xml
+++ b/app/src/main/res/layout/fragment_pay_review.xml
@@ -119,8 +119,10 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginStart="16dp"
+            android:padding="10dp"
             android:layout_marginTop="32dp"
-            android:background="@drawable/shp_circle_blue700"
+            android:src="@drawable/ic_m"
+            android:background="@drawable/shp_circle_darkblue700"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/receiverDetail" />
 
