--- a/app/src/main/res/layout/fragment_food_order.xml
+++ b/app/src/main/res/layout/fragment_food_order.xml
@@ -23,36 +23,36 @@
             android:background="@color/white" />
 
 
-        <com.mayburger.gojekuiclone.util.Fireworks
+        <com.mayburger.gojekuiclone.util.FireworkView
             android:id="@+id/fireworkRed"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="100dp"
             android:layout_marginEnd="16dp"
              />
 
-        <com.mayburger.gojekuiclone.util.Fireworks
+        <com.mayburger.gojekuiclone.util.FireworkView
             android:id="@+id/fireworkYellow"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_marginStart="64dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
              />
 
-        <com.mayburger.gojekuiclone.util.Fireworks
+        <com.mayburger.gojekuiclone.util.FireworkView
             android:id="@+id/fireworkBlue"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_marginTop="220dp"
             android:layout_marginEnd="16dp"
              />
 
-        <com.mayburger.gojekuiclone.util.Fireworks
+        <com.mayburger.gojekuiclone.util.FireworkView
             android:id="@+id/fireworkGreen"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="250dp"
             android:layout_marginEnd="64dp"
@@ -72,7 +72,7 @@
                 android:layout_height="100dp"
                 android:layout_margin="32dp"
                 app:cardBackgroundColor="@color/green_700"
-                app:cardCornerRadius="300dp"
+                app:cardCornerRadius="200dp"
                 app:cardElevation="2dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
